--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     container_name: ms_pg_sql
     image: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 12345
+      POSTGRES_USER: pcodes
+      POSTGRES_PASSWORD: pcodes
       PGDATA: /var/lib/postgresql/data
     volumes:
       - postgres:/var/lib/postgresql/data
@@ -30,12 +30,26 @@ services:
     container_name: mongo_express
     restart: unless-stopped
     ports:
-      - 8081:8081
+      - "8081:8081"
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=pcodes
       - ME_CONFIG_MONGODB_ADMINPASSWORD=pcodes
       - ME_CONFIG_MONGODB_SERVER=mongodb
       - ME_CONFIG_BASICAUTH=false
+
+  keycloak:
+    container_name: keycloak-wac
+    image: quay.io/keycloak/keycloak
+    ports:
+      - "9090:8080"
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    networks:
+      - microservices-net
+    command:
+      - "start-dev"
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     container_name: zookeeper
@@ -78,3 +92,5 @@ networks:
 volumes:
   postgres:
   mongo:
+  keycloak:
+    driver: local
