--- a/services/config-server/src/main/resources/configurations/customer-service.yml
+++ b/services/config-server/src/main/resources/configurations/customer-service.yml
@@ -1,13 +1,11 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/customer
-    username: postgres
-    password: 12345
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+  data:
+    mongodb:
+      username: pcodes
+      password: pcodes
+      host: localhost
+      port: 27017
+      database: customer
+      authentication-database: admin
 server:
   port: 8090
