--- a/services/config-server/src/main/resources/configurations/product-service.yml
+++ b/services/config-server/src/main/resources/configurations/product-service.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/product
-    username: postgres
-    password: 12345
+    username: pcodes
+    password: pcodes
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
