adjusting notification service

--- a/services/config-server/src/main/resources/configurations/order-service.yml
+++ b/services/config-server/src/main/resources/configurations/order-service.yml
@@ -1,19 +1,19 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/order
-    username: postgres
-    password: 12345
+    username: pcodes
+    password: pcodes
     driver-class-name: org.postgresql.Driver
   kafka:
     producer:
       bootstrap-servers: localhost:9092
-      key-serializer: org.apache.kafka.common.serialization.StringSerialization
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
         spring.json.type.mapping: orderConfirmation:com.codewithpcodes.ecommerce.kafka.OrderConfirmation
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 application:
