--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -10,12 +10,12 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
-      key-deserializer: org.apache.kafka.common.serialization.StringSerialization
-      value-deserializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: '*'
         spring.json.type.mapping: orderConfirmation:com.codewithpcodes.ecommerce.kafka.OrderConfirmation,paymentConfirmation:com.codewithpcodes.ecommerce.notification.PaymentNotificationRequest;
-      group-id: paymentGroup, orderGroup
+      group-id: notificationGroup
       auto-offset-reset: earliest
   mail:
     host: localhost
