--- a/services/order/pom.xml
+++ b/services/order/pom.xml
@@ -38,7 +38,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-circuitbreaker-resilience4j</artifactId>
-            <version>5.0.0-M3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
